--- a/word-relay.html
+++ b/word-relay.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div><span id="order">1</span>번째 참가자</div>
     <div>제시어: <span id="word"></span></div>
-    <input type="text">
+    <input type="text" />
     <button>입력</button>
     <script>
-        const number = Number(prompt("몇명이 참가하나요?"));
-        const $button = document.querySelector("button");
-        const $input = document.querySelector("input");
+      const number = Number(prompt("몇명이 참가하나요?"));
+      const $button = document.querySelector("button");
+      const $input = document.querySelector("input");
+      const $word = document.querySelector("#word");
+      const $order = document.querySelector("#order");
+      let word; //제시어
+      let newWord; //새로 입력한 단어
+      const onClickButton = () => {
+        if (!word) {
+          //제시어 비어있니?
+          //비어있다면
+          word = newWord; //새 제시어 시작
+          $word.textContent = word; // 텍스트칸에넣기
+          const order = Number($order.textContent); //순서
+          if (order + 1 > number) {
+            //다음사람에게 순서를 넘긴다.,현재순서에 1을더한값이 number보다 큰가
+            $order.textContent = 1; //다음순서 1로
+          } else {
+            $order.textContent = order + 1;
+          }
+          $input.value = ""; // 타이핑쳤던거 칸 초기화
+          $input.focus();
 
-        const onClickButton = () => {
-            
-        };
-        const onInput = (event) => {
-
-        };
-        $button.addEventListener("click",onClickButton);
-        $input.addEventListener("input",onInput);
-
-    
+          //비어있지 않다면
+        } else {
+          // 입력란 단어가 올바른가?? //끝글자와 새 글자가 올바른가?
+          if (word[word.length - 1] === newWord[0]) {
+            word = newWord; //그렇다면 입력한단어 제시어로
+            $word.textContent = word; //입력값
+            $input.value = ""; //하고난다음 텍스트 초기화
+            const order = Number($order.textContent);
+            if (order + 1 > number) {
+              // 다음순서
+              $order.textContent = 1;
+            } else {
+              $order.textContent = order + 1;
+            }
+            $input.focus();
+          } else {
+            alert(newWord + " 올바르지 않는 단어");
+            $input.value = ""; //하고난다음 텍스트 초기화
+            $input.focus();
+          }
+        }
+      };
+      const onInput = (event) => {
+        newWord = event.target.value;
+      };
+      $button.addEventListener("click", onClickButton);
+      $input.addEventListener("input", onInput);
     </script>
-</body>
+  </body>
 </html>
