--- a/calculator.html
+++ b/calculator.html
@@ -61,46 +61,26 @@
       let numTwo = "";
       const $operator = document.querySelector("#operator");
       const $result = document.querySelector("#result");
-      const onClickNumber = (number) => {
+      const onClickNumber = (event) => {
         return () => {
           if (operator) {
-            numTwo += number;
+            numTwo += event.target.textContent;
           } else {
-            numOne += number;
+            numOne += event.target.textContent;
           }
-          $result.value += number;
+          $result.value += event.target.textContent;
         };
       };
-      document
-        .querySelector("#num-0")
-        .addEventListener("click", onClickNumber("0"));
-      document
-        .querySelector("#num-1")
-        .addEventListener("click", onClickNumber("1"));
-      document
-        .querySelector("#num-2")
-        .addEventListener("click", onClickNumber("2"));
-      document
-        .querySelector("#num-3")
-        .addEventListener("click", onClickNumber("3"));
-      document
-        .querySelector("#num-4")
-        .addEventListener("click", onClickNumber("4"));
-      document
-        .querySelector("#num-5")
-        .addEventListener("click", onClickNumber("5"));
-      document
-        .querySelector("#num-6")
-        .addEventListener("click", onClickNumber("6"));
-      document
-        .querySelector("#num-7")
-        .addEventListener("click", onClickNumber("7"));
-      document
-        .querySelector("#num-8")
-        .addEventListener("click", onClickNumber("8"));
-      document
-        .querySelector("#num-9")
-        .addEventListener("click", onClickNumber("9"));
+      document.querySelector("#num-0").addEventListener("click", onClickNumber);
+      document.querySelector("#num-1").addEventListener("click", onClickNumber);
+      document.querySelector("#num-2").addEventListener("click", onClickNumber);
+      document.querySelector("#num-3").addEventListener("click", onClickNumber);
+      document.querySelector("#num-4").addEventListener("click", onClickNumber);
+      document.querySelector("#num-5").addEventListener("click", onClickNumber);
+      document.querySelector("#num-6").addEventListener("click", onClickNumber);
+      document.querySelector("#num-7").addEventListener("click", onClickNumber);
+      document.querySelector("#num-8").addEventListener("click", onClickNumber);
+      document.querySelector("#num-9").addEventListener("click", onClickNumber);
       document.querySelector("#plus").addEventListener("click", () => {});
       document.querySelector("#minus").addEventListener("click", () => {});
       document.querySelector("#divide").addEventListener("click", () => {});
