--- a/calculator.html
+++ b/calculator.html
@@ -62,14 +62,18 @@
       const $operator = document.querySelector("#operator");
       const $result = document.querySelector("#result");
       const onClickNumber = (event) => {
-        return () => {
-          if (operator) {
-            numTwo += event.target.textContent;
-          } else {
-            numOne += event.target.textContent;
-          }
+        if (!operator) {
+          //비어있다.
+          numOne += event.target.textContent;
           $result.value += event.target.textContent;
-        };
+          return;
+        }
+        //비어있지않다
+        if (!numTwo) {
+          $result.value = "";
+        }
+        numTwo += event.target.textContent;
+        $result.value += event.target.textContent;
       };
       document.querySelector("#num-0").addEventListener("click", onClickNumber);
       document.querySelector("#num-1").addEventListener("click", onClickNumber);
@@ -81,12 +85,55 @@
       document.querySelector("#num-7").addEventListener("click", onClickNumber);
       document.querySelector("#num-8").addEventListener("click", onClickNumber);
       document.querySelector("#num-9").addEventListener("click", onClickNumber);
-      document.querySelector("#plus").addEventListener("click", () => {});
-      document.querySelector("#minus").addEventListener("click", () => {});
-      document.querySelector("#divide").addEventListener("click", () => {});
-      document.querySelector("#multiply").addEventListener("click", () => {});
-      document.querySelector("#calculate").addEventListener("click", () => {});
-      document.querySelector("#clear").addEventListener("click", () => {});
+      const onClickOperator = (op) => () => {
+        if (numOne) {
+          operator = op;
+          $operator.value = op;
+        } else {
+          alert("숫자를 먼저 입력하세요.");
+        }
+      };
+      document
+        .querySelector("#plus")
+        .addEventListener("click", onClickOperator("+"));
+      document
+        .querySelector("#minus")
+        .addEventListener("click", onClickOperator("-"));
+      document
+        .querySelector("#divide")
+        .addEventListener("click", onClickOperator("/"));
+      document
+        .querySelector("#multiply")
+        .addEventListener("click", onClickOperator("*"));
+      document.querySelector("#calculate").addEventListener("click", () => {
+        if (numTwo) {
+          switch (operator) {
+            case "+":
+              $result.value = parseInt(numOne) + parseInt(numTwo);
+              break;
+            case "-":
+              $result.value = numOne - numTwo;
+              break;
+            case "*":
+              $result.value = numOne * numTwo;
+              break;
+            case "/":
+              $result.value = numOne / numTwo;
+              break;
+            default:
+              break;
+          }
+        } else {
+          alert("数を まず 入力してください.");
+        }
+      });
+      document.querySelector("#clear").addEventListener("click", () => {
+        numOne = "";
+        operator = "";
+        numTwo = "";
+        $operator.value = "";
+        $result.value = "";
+      });
     </script>
   </body>
 </html>
