--- a/calculator.html
+++ b/calculator.html
@@ -123,6 +123,10 @@
             default:
               break;
           }
+          $operator.value = "";
+          numOne = $result.value;
+          operator = "";
+          numTwo = "";
         } else {
           alert("数を まず 入力してください.");
         }
