--- a/text-rpg.html
+++ b/text-rpg.html
@@ -76,7 +76,7 @@
         { name: "스켈레톤", hp: 50, att: 15, xp: 20 },
         { name: "마왕", hp: 150, att: 35, xp: 50 },
       ];
-
+      //변수명 잘 지어야함.
       $startScreen.addEventListener("submit", (event) => {
         event.preventDefault();
         const name = event.target["name-input"].value;
@@ -97,6 +97,7 @@
           // 모험
           $gameMenu.style.display = "none";
           $battleMenu.style.display = "block";
+          //참조, 얕은복사, 깊은복사(json)
           monster = JSON.parse(
             JSON.stringify(
               monsterList[Math.floor(Math.random() * monsterList.length)]
